Fixed text bug on mobile

--- a/src/styles/modules/LandingPage.module.scss
+++ b/src/styles/modules/LandingPage.module.scss
@@ -18,4 +18,8 @@
         grid-template-columns: repeat(1, 1fr);
         gap: 1em;
     }
+
+    .betanotice {
+        visibility: hidden;
+    }
 }
